nav bar links styled, nav bar styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <nav id="desktop-nav"></nav>
+    <nav id="desktop-nav">
     <div class="logo">Tamara Sferco</div>
     <div>
         <ul class="nav-links">
@@ -20,8 +20,8 @@
 
         </ul>
     </div>
-Hello
 
+</nav>
     <script src ="script.js"></script>
 </body>
 </html>
