--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
     </div>
 
 </nav>
+<nav id="hamburger-nav">
+    <div class="logo">Tamara Sferco</div>
+    <div class="hamburger-menu">
+        <div class="hamburger-icon" onclick="menuToggle()">
+        <span></span>
+        <span></span>
+        <span></span>
+        </div>
+    </div>
+<div class="menu-links">
+    <li> <a href="#About" onclick="menuToggle()">About </a></li>
+    <li><a href="#Projects" onclick="menuToggle()">Projects</a> </li>
+    <li><a href="#Experience" onclick="menuToggle()">Experience</a> </li>
+    <li><a href="#Contact" onclick="menuToggle()">Contact</a></li>
+</div>
+</nav>
     <script src ="script.js"></script>
 </body>
 </html>
